docker-project/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: demo-app
  policyTypes:
  - Ingress
  - Egress
  # ingress:
  # - from:
  #   - ipBlock:
  #       cidr: 0.0.0.0/0
  #   ports:
  #   - protocol: TCP
  #     port: 80
  # egress:
  # - to:
  #   - ipBlock:
  #       cidr: 0.0.0.0/0
  #   ports:
  #   - protocol: TCP
  #     port: 80
